--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION"/>
-
+    <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION" />
 
     <application
         android:allowBackup="true"
@@ -16,6 +15,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Bubu"
         tools:targetApi="31">
+        <activity
+            android:name=".choice"
+            android:exported="false" />
+        <activity
+            android:name=".graphPlots"
+            android:exported="false" />
+        <activity
+            android:name=".selectCSV"
+            android:exported="false" />
         <activity
             android:name=".dashboard"
             android:exported="false" />
