--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,12 @@
 buildscript {
+    repositories {
+
+        maven { url 'https://www.jitpack.io' }
+    }
     dependencies {
         classpath 'com.google.gms:google-services:4.3.14'
     }
+
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '8.0.2' apply false
